--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.3",
-        "spatie/laravel-permission": "^6.20",
-        "stancl/tenancy": "^3.9"
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
